--- a/codemagic.yaml
+++ b/codemagic.yaml
@@ -17,7 +17,7 @@ workflows:
           flutter pub get
       - name: Build Flutter (Web)
         script: |
-          flutter build web --release --web-renderer html --no-tree-shake-icons
+          flutter build web --release
     artifacts:
       - build/web/**
     publishing:
